--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+      "export": "next export"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
+       "@netlify/plugin-nextjs": "latest",
     "eslint-config-next": "14.2.5"
   }
 }
